<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141A33"
    android:elevation="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/MainTextStyle"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:text="@string/trivia_question_title"
        android:textColor="@color/light_gray_txt_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/out_of_text"
        style="@style/MainTextStyle"
        android:layout_width="321dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_out_of"
        android:textColor="#E4DDDD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="365dp"
        android:layout_height="153dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#1B213A"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/out_of_text" />

    <Button
        android:id="@+id/true_button"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:text="@string/true_button_text"
        app:layout_constraintBottom_toTopOf="@+id/false_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/false_button"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/false_button_text"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/true_button" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/next_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_button" />
</androidx.constraintlayout.widget.ConstraintLayout>